RESOLVED FIXED52493
[jsfunfuzz] parser doesn't enforce continue restrictions correctly.
https://bugs.webkit.org/show_bug.cgi?id=52493
Summary [jsfunfuzz] parser doesn't enforce continue restrictions correctly.
Oliver Hunt
Reported 2011-01-14 16:15:06 PST
[jsfunfuzz] parser doesn't enforce continue restrictions correctly.
Attachments
Patch (19.05 KB, patch)
2011-01-14 16:34 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2011-01-14 16:34:57 PST
Oliver Hunt
Comment 2 2011-01-14 17:25:41 PST
Note You need to log in before you can comment on or make changes to this bug.